--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dev:storybook": "start-storybook -p 6006 -c .storybook",
     "dev:js": "gatsby develop",
     "dev:css": "postcss src/tailwind.css -o static/css/index.css --watch",
-    "start": "concurrently --kill-others \"npm run dev\" \"npm run storybook\"",
+    "start": "concurrently --kill-others \"npm run dev\" \"npm run build:storybook\"",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "build": "NODE_ENV=production npm-run-all -s build:css build:gatsby",
