--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dev:storybook": "start-storybook -p 6006 -c .storybook",
     "dev:js": "gatsby develop",
     "dev:css": "postcss src/tailwind.css -o static/css/index.css --watch",
-    "start": "concurrently --kill-others \"npm run dev\" \"npm run build:storybook\"",
+    "start": "concurrently --kill-others \"npm run dev\" \"npm run storybook\"",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "build": "NODE_ENV=production npm-run-all -s build:css build:gatsby",
@@ -78,15 +78,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
-    "@storybook/addon-a11y": "^5.3.19",
-    "@storybook/addon-actions": "5.3.19",
-    "@storybook/addon-info": "^5.3.19",
-    "@storybook/addon-options": "5.3.19",
-    "@storybook/addon-viewport": "5.3.19",
-    "@storybook/react": "^5.3.19",
+    "@storybook/addon-a11y": "^6.3.6",
+    "@storybook/addon-actions": "6.3.6",
+    "@storybook/addon-info": "^5.3.21",
+    "@storybook/addon-options": "5.3.21",
+    "@storybook/addon-viewport": "6.3.6",
+    "@storybook/react": "^6.3.6",
     "@types/jest": "^26.0.9",
     "@types/react-helmet": "^6.1.0",
-    "@types/storybook__addon-info": "^5.2.1",
+    "@types/storybook__addon-info": "^5.2.4",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
