--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,3 +27,12 @@ collections:
       - {label: "Image Caption", name: "imgAlt", widget: string}
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Body", name: "body", widget: "markdown"}
+  - name: "testimoials"
+    label: "Testimonials"
+    folder: "content/testimonials"
+    create: true
+    fields:
+      - {label: "Testimonial", name: "title", widget: "string"}
+      - {label: "Publish Date", name: "publishDate", widget: "datetime"}
+      - {label: "Customer's Name", name: "customerName", widget: "string"}
+      - {label: "Image", name: "image", widget: image}
