--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -32,7 +32,8 @@ collections:
     folder: "content/testimonials"
     create: true
     fields:
-      - {label: "Testimonial", name: "title", widget: "string"}
+      - {label: "Name", name: "name", widget: "string"}
+      - {label: "Body", name: "title", widget: "string"}
       - {label: "Publish Date", name: "publishDate", widget: "datetime"}
-      - {label: "Customer's Name", name: "customerName", widget: "string"}
-      - {label: "Image", name: "image", widget: image}
+      - {label: "Image", name: "img", widget: image}
+      - {label: "Image Alt Text", name: "imgAlt", widget: string}
