--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -35,5 +35,5 @@ collections:
       - {label: "Name", name: "name", widget: "string"}
       - {label: "Body", name: "title", widget: "markdown"}
       - {label: "Publish Date", name: "publishDate", widget: "datetime"}
-      - {label: "Image", name: "img", widget: image}
-      - {label: "Image Alt Text", name: "imgAlt", widget: string}
+      - {label: "Image", name: "img", widget: image, optional: true}
+      - {label: "Image Alt Text", name: "imgAlt", widget: string, optional: true}
