--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -32,6 +32,7 @@ collections:
     folder: "content/testimonials"
     create: true
     fields:
+      - {label: "Template", name: "template", widget: "hidden", default: "testimonial"}
       - {label: "Name", name: "name", widget: "string"}
       - {label: "Body", name: "title", widget: "markdown"}
       - {label: "Publish Date", name: "publishDate", widget: "datetime"}
