--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -36,6 +36,7 @@ collections:
       - {label: "Template", name: "template", widget: "hidden", default: "testimonial"}
       - {label: "Name", name: "name", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Rating", name: "rating", widget: "number"}
       - {label: "Published Date", name: "publishedDate", widget: "datetime"}
-      - {label: "Image", name: "img", widget: image, optional: true}
-      - {label: "Image Alt Text", name: "imgAlt", widget: string, optional: true}
+      - {label: "Image", name: "img", widget: image, required: false}
+      - {label: "Image Alt Text", name: "imgAlt", widget: string, required: false}
