--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -35,7 +35,7 @@ collections:
     fields:
       - {label: "Template", name: "template", widget: "hidden", default: "testimonial"}
       - {label: "Name", name: "name", widget: "string"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Body", name: "body", widget: "string"}
       - {label: "Rating", name: "rating", widget: "number"}
       - {label: "Published Date", name: "publishedDate", widget: "datetime"}
       - {label: "Image", name: "img", widget: image, required: false}
