--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "generate-favicon": "npx favicons-generate --input ./static/logo.png --output ./static/img && cp ./static/img/favicon.ico ./static/favicon.ico"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@mdx-js/mdx": "^1.6.16",
     "@mdx-js/react": "^1.6.16",
     "@tailwindcss/ui": "^0.5.0",
