--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,7 +33,7 @@ collections:
     folder: "content/testimonials"
     create: true
     fields:
-      - {label: "Template", name: "template", widget: "hidden", default: "testimonial"}
+      - {label: "Template", name: "template", widget: "hidden", default: "testimonials"}
       - {label: "Name", name: "name", widget: "string"}
       - {label: "Body", name: "body", widget: "string"}
       - {label: "Rating", name: "rating", widget: "number"}
