--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -34,7 +34,7 @@ collections:
     create: true
     fields:
       - {label: "Template", name: "template", widget: "hidden", default: "testimonials"}
-      - {label: "Name", name: "name", widget: "string"}
+      - {label: "Name of Reviewer", name: "title", widget: "string"}
       - {label: "Body", name: "body", widget: "string"}
       - {label: "Rating", name: "rating", widget: "number"}
       - {label: "Published Date", name: "publishedDate", widget: "datetime"}
